# NeuromechanicsControl

./: CITATION.cff  README.md
ROS-packages/control/devel/: .catkin  .rosinstall  setup.sh
ROS-packages/control/devel/include/neuromechanics_control/: Analog.h  AnalogCompact.h  AnalogCompactDelay.h  AnalogCompact_AgonistAntagonist.h  CocontractionProfileDynParametersConfig.h  DelayGeneratorDynParametersConfig.h  DynParametersConfig.h  DynParameters_2EntriesConfig.h  EkebergConfig.h  JointSpringsExampleConfig.h  JointsPDConfig.h  LearningState.h  MaeDynParametersConfig.h  Spike.h  Spike_group.h  SynchronizerDynParametersConfig.h  Time.h  WeightsDynParametersConfig.h
ROS-packages/control/devel/lib/neuromechanics_control/: baxter_arm_state_node_sync  baxter_position_command_node  delay_analog_node  (+17 more)
ROS-packages/control/src/neuromechanics_control/: CMakeLists.txt
ROS-packages/control/src/neuromechanics_control/cerebellar_network/: Network_6_joints_7MF_per_RBF_4MF_per_GrC.cfg  Network_6_joints_7MF_per_RBF_4MF_per_GrC_learningOFF.cfg  Weights_6_joints_7MF_per_RBF_4MF_per_GrC.cfg
ROS-packages/control/src/neuromechanics_control/cfg/: CocontractionProfileDynParameters.cfg  DelayGeneratorDynParameters.cfg  DynParameters_2Entries.cfg  Ekeberg.cfg  JointSpringsExample.cfg  JointsPD.cfg  SynchronizerDynParameters.cfg  WeightsDynParameters.cfg
ROS-packages/control/src/neuromechanics_control/include/neuromechanics_control/: DelayGeneratorDynParams.h  MuscleDynamicsActiveCocontraction.h  MuscleDynamicsCocontraction.h  MuscleDynamicsCocontraction_DirectPD.h  MuscleDynamicsCocontraction_WithPD.h  MuscleDynamicsCocontraction_WithPD_Ablation.h  PDSupervisor.h  Q_TrajectoryController.h  Q_TrajectoryGenerator.h  ROSCocontractionModulation.h  ROSErrorCalculatorCompact.h  ROSPoissonGenerator.h  ROSSpikeDecoderCompact_AgonistAntagonist.h  ROSTopicInputDriver.h  ROSTorqueCalculatorAddition.h  SynchronizerDynParams.h
ROS-packages/control/src/neuromechanics_control/launch/muscle_torque/PD/: PD_direct_control_verticalCircle_2-5s_rightArm.launch  PD_muscular_eight_2-5s_rightArm.launch  PD_muscular_verticalCircle_2-5s_rightArm.launch
ROS-packages/control/src/neuromechanics_control/launch/muscle_torque/ablation/: PD_ablation_elasticity_vCircle.launch  PD_ablation_reference_vCircle.launch  PD_ablation_reflex_vCircle.launch  PD_ablation_viscosity_vCircle.launch
ROS-packages/control/src/neuromechanics_control/launch/muscle_torque/cerebello_muscular/activeCocontraction/: active_cocontraction_t_trajectory_10s.launch
ROS-packages/control/src/neuromechanics_control/launch/muscle_torque/cerebello_muscular/eight/: cerebello_muscular_eight_2-5s_rightArm.launch  cerebello_muscular_eight_2-5s_rightArm_learningOFF.launch  cerebello_muscular_eight_2s_rightArm.launch
ROS-packages/control/src/neuromechanics_control/launch/muscle_torque/cerebello_muscular/verticalCircle/: cerebello_muscular_verticalCircle_0-8s_rightArm.launch  cerebello_muscular_verticalCircle_1-5s_rightArm.launch  cerebello_muscular_verticalCircle_1s_rightArm.launch  cerebello_muscular_verticalCircle_2-5s_rightArm.launch  cerebello_muscular_verticalCircle_2-5s_rightArm_learningOFF.launch  cerebello_muscular_verticalCircle_2s_rightArm.launch
ROS-packages/control/src/neuromechanics_control/launch/position_control/: position_control_T_trajectory_10s.launch  position_control_eight_2-5s_right_arm.launch  position_control_eight_2s_right_arm.launch  position_control_vertical_circle_0-8s_right_arm.launch  position_control_vertical_circle_1-5s_right_arm.launch  position_control_vertical_circle_1s_right_arm.launch  position_control_vertical_circle_2-5s_right_arm.launch  position_control_vertical_circle_2s_right_arm.launch
ROS-packages/control/src/neuromechanics_control/rosbags/: readme.txt
ROS-packages/control/src/neuromechanics_control/src/: MuscleDynamicsActiveCocontraction.cpp  MuscleDynamicsCocontraction.cpp  MuscleDynamicsCocontraction_DirectPD.cpp  MuscleDynamicsCocontraction_WithPD.cpp  MuscleDynamicsCocontraction_WithPD_Ablation.cpp  PDSupervisor.cpp  Q_TrajectoryController.cpp  Q_TrajectoryGenerator.cpp  ROSCocontractionModulation.cpp  ROSErrorCalculatorCompact.cpp  ROSPoissonGenerator.cpp  ROSRBFBank_delay.cpp  ROSSpikeDecoderCompact_AgonistAntagonist.cpp  ROSTopicInputDriver.cpp  ROSTopicOutputDriver.cpp  ROSTorqueCalculatorAddition.cpp  RasterPlot_and_AnalogSignal.py  SynchronizerDynParams.cpp  baxter_arm_state_node_sync.cpp  baxter_position_command_node.cpp  baxter_torque_command_node.cpp  cocontraction_modulation.cpp  cocontraction_profile_publisher.py  delay_analog_node.cpp  error_estimator_node_compact.cpp  median_filter_node_agonist_antagonist.cpp  muscle_dynamics.cpp  muscle_dynamics_active_cocontraction.cpp  muscle_dynamics_directPD.cpp  muscle_dynamics_withPD.cpp  muscle_dynamics_withPD_ablation.cpp  pd_supervisor_node.cpp  poisson_generator_node_delay_compact.cpp  q_trajectory_generator_node.cpp  rbf_node_sync_delay.cpp  robot_enabler_node.py  simulator_node.cpp  spike_decoder_node_compact_agonist_antagonist.cpp  synchronizer_node.cpp  torque_addition_node.cpp  (+1 more)
ROS-packages/control/src/neuromechanics_control/trajectory_data_T/: T_trajectory_10s_position.txt  T_trajectory_10s_velocity.txt
ROS-packages/control/src/neuromechanics_control/trajectory_data_eight/: eightTrajectory_position_right_arm_2-5s.txt  eightTrajectory_position_right_arm_2s.txt  eightTrajectory_velocity_right_arm_2-5s.txt  eightTrajectory_velocity_right_arm_2s.txt
ROS-packages/control/src/neuromechanics_control/trajectory_data_vertical_circle/: vertical_circle_position_right_arm_0-8s.txt  vertical_circle_position_right_arm_1-5s.txt  vertical_circle_position_right_arm_1s.txt  vertical_circle_position_right_arm_2-5s.txt  vertical_circle_position_right_arm_2s.txt  vertical_circle_velocity_right_arm_0-8s.txt  vertical_circle_velocity_right_arm_1-5s.txt  vertical_circle_velocity_right_arm_1s.txt  vertical_circle_velocity_right_arm_2-5s.txt  vertical_circle_velocity_right_arm_2s.txt
ROS-packages/monitoring/src/neuromechanics_control/: CMakeLists.txt  package.xml
(+97 files in other folders)
